taskalive lack of gantt img

--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
                       <a href="">Apps</a>
                       <div  id="dropdown_apps" class="list-group">
                           <a href="taskalive.html" class="list-group-item apps_list_item">TaskAlive</a>
-                          <a href="#" class="list-group-item apps_list_item">Cost Control</a>
+                          <a href="costcontrol.html" class="list-group-item apps_list_item">Cost Control</a>
                           <a href="#" class="list-group-item apps_list_item">FMEA</a>
                       </div>
                     </li>
@@ -30,7 +30,19 @@
                     <li ><a href="#blog">Blog</a></li> -->
                     <li ><a href="contact.html">Contact</a></li>
                 </ul>
+                <div class="nav navbar-nav navbar-right" style="height:100px">
+                  <div class="row" style="height:100%;text-align:center">
+                    <div class="col-sm-6 button_sign" >
+                      <a class="btn btn-primary btn-md" href="#">Sign in</a>
+                    </div>
+                    <div class="col-sm-6 button_sign" >
+                      <a class="btn" href="#">Try Now!</a>
+                    </div>
+                  </div>
+                </div>
+
             </div>
+
         </div><!--/.container-->
     </nav><!--/nav-->
 </header><!--/header-->
