--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-9">
-                        <h2>Premium quality free onepage template</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        <h2>Droproblem为您提供多种解决方案</h2>
+                        <p>解决您的需求烦恼。</p>
+                        <p>
+                          一站式解决方案提供商，让您不再为找不到高效应用、或是需要使用多个不同软件来管理您的日常业务而烦恼。
                         </p>
                     </div>
                     <div class="col-sm-3 text-right">
-                        <a class="btn btn-primary btn-lg" href="#">Download Now!</a>
+                        <a class="btn btn-primary btn-lg" href="#">Try Now!</a>
                     </div>
                 </div>
             </div>
@@ -87,7 +89,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="section-title text-center wow fadeInDown">产品特色</h2>
-                    <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                    <p class="text-center wow fadeInDown">产品数据相互关联 <br> 满足企业的一切业务需求</p>
                 </div>
                 <div class="row" style=“text-align:center;”>
                     <div class="col-sm-6 wow fadeInLeft" >
@@ -168,7 +170,6 @@
         $(function(){
             $("header").load('./header.html');
             $("footer").load('./footer.html');
-            console.log('dasdasdasdas')
         })
     </script>
 
