--- a/price.html
+++ b/price.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-12 col-md-4">
                     <div class="wow zoomIn" data-wow-duration="400ms" data-wow-delay="0ms">
                         <ul class="pricing">
                             <li class="plan-header">
@@ -48,25 +48,23 @@
                                         ¥0
                                     </span>
                                     <span class="duration">
-                                        per year
+                                        每年
                                     </span>
                                 </div>
 
                                 <div class="plan-name">
-                                    Starter
+                                    试用版
                                 </div>
                             </li>
-                            <li><strong>1</strong> DOMAIN</li>
-                            <li><strong>100GB</strong> DISK SPACE</li>
-                            <li><strong>UNLIMITED</strong> BANDWIDTH</li>
-                            <li>SHARED SSL CERTIFICATE</li>
-                            <li><strong>10</strong> EMAIL ADDRESS</li>
-                            <li><strong>24/7</strong> SUPPORT</li>
+                            <li>适用<strong>1-5</strong>人团队</li>
+                            <li><strong>2GB</strong>云盘空间</li>
+                            <li><strong>5个</strong><项目成员</li>
+                            <li><strong>基础</strong>功能</li>
                             <li class="plan-purchase"><a class="btn btn-primary" href="#">ORDER NOW</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-12 col-md-4">
                     <div class="wow zoomIn" data-wow-duration="400ms" data-wow-delay="200ms">
                         <ul class="pricing featured">
                             <li class="plan-header">
@@ -75,53 +73,24 @@
                                         ¥299
                                     </span>
                                     <span class="duration">
-                                        per year
+                                        每人每年
                                     </span>
                                 </div>
 
                                 <div class="plan-name">
-                                    Business
+                                    企业版
                                 </div>
                             </li>
-                            <li><strong>3</strong> DOMAIN</li>
-                            <li><strong>300GB</strong> DISK SPACE</li>
-                            <li><strong>UNLIMITED</strong> BANDWIDTH</li>
-                            <li>SHARED SSL CERTIFICATE</li>
-                            <li><strong>30</strong> EMAIL ADDRESS</li>
-                            <li><strong>24/7</strong> SUPPORT</li>
+                            <li>适用<strong>1-50</strong> 人团队</li>
+                            <li><strong>50GB</strong> 云盘</li>
+                            <li><strong>50</strong> 项目成员</li>
+                            <li><strong>高级</strong>功能</li>
                             <li class="plan-purchase"><a class="btn btn-default" href="#">ORDER NOW</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
+                <div class="col-sm-12 col-md-4">
                     <div class="wow zoomIn" data-wow-duration="400ms" data-wow-delay="400ms">
-                        <ul class="pricing">
-                            <li class="plan-header">
-                                <div class="price-duration">
-                                    <span class="price">
-                                        ¥499
-                                    </span>
-                                    <span class="duration">
-                                        per year
-                                    </span>
-                                </div>
-
-                                <div class="plan-name">
-                                    Pro
-                                </div>
-                            </li>
-                            <li><strong>5</strong> DOMAIN</li>
-                            <li><strong>500GB</strong> DISK SPACE</li>
-                            <li><strong>UNLIMITED</strong> BANDWIDTH</li>
-                            <li>SHARED SSL CERTIFICATE</li>
-                            <li><strong>50</strong> EMAIL ADDRESS</li>
-                            <li><strong>24/7</strong> SUPPORT</li>
-                            <li class="plan-purchase"><a class="btn btn-primary" href="#">ORDER NOW</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3">
-                    <div class="wow zoomIn" data-wow-duration="400ms" data-wow-delay="600ms">
                         <ul class="pricing">
                             <li class="plan-header">
                                 <div class="price-duration">
@@ -129,20 +98,17 @@
                                         ¥699
                                     </span>
                                     <span class="duration">
-                                        per year
+                                        每人每年
                                     </span>
                                 </div>
-
                                 <div class="plan-name">
-                                    Ultra
+                                    尊享版
                                 </div>
                             </li>
-                            <li><strong>10</strong> DOMAIN</li>
-                            <li><strong>1000GB</strong> DISK SPACE</li>
-                            <li><strong>UNLIMITED</strong> BANDWIDTH</li>
-                            <li>SHARED SSL CERTIFICATE</li>
-                            <li><strong>100</strong> EMAIL ADDRESS</li>
-                            <li><strong>24/7</strong> SUPPORT</li>
+                            <li><strong>无限</strong> 人数</li>
+                            <li><strong>500GB</strong> 云盘空间</li>
+                            <li><strong>无限</strong> 项目成员</li>
+                            <li><strong>个性化</strong> 定制</li>
                             <li class="plan-purchase"><a class="btn btn-primary" href="#">ORDER NOW</a></li>
                         </ul>
                     </div>
@@ -172,7 +138,6 @@
         $(function(){
             $("header").load('./header.html');
             $("footer").load('./footer.html');
-            console.log('dasdasdasdas')
         })
     </script>
 
