--- a/taskalive.html
+++ b/taskalive.html
@@ -28,136 +28,135 @@
 
 <body id="home" class="homepage">
     <!-- 顶部导航 -->
-    <nav data-load="header.html"></nav>
+    <header></header>
     <!--顶部导航 over-->
-    <section id="pricing">
+    <section id="about">
         <div class="container">
+
             <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">Pricing Table</h2>
-                <p class="text-center wow fadeInDown">test</p>
+                <h2 class="section-title text-center wow fadeInDown">TaskAlive</h2>
+                <p class="text-center wow fadeInDown">一款项目管理应用</p>
+                <p class="text-center wow fadeInDown">
+                      <a class="btn btn-primary btn-lg" href="#">Try Now!</a>
+                </p>
             </div>
 
+            <!-- 项目列表 -->
             <div class="row">
-                <div class="col-sm-6 col-md-3">
-                    <div class="wow zoomIn" data-wow-duration="400ms" data-wow-delay="0ms">
-                        <ul class="pricing">
-                            <li class="plan-header">
-                                <div class="price-duration">
-                                    <span class="price">
-                                        FREE
-                                    </span>
-                                    <span class="duration">
-                                        <!-- per month -->
-                                    </span>
-                                </div>
+                <div class="col-sm-12 col-md-6 wow fadeInLeft">
+                    <h3 class="column-title">项目列表</h3>
 
-                                <div class="plan-name">
-                                    Starter
-                                </div>
-                            </li>
-                            <li><strong>1</strong> DOMAIN</li>
-                            <li><strong>100GB</strong> DISK SPACE</li>
-                            <li><strong>UNLIMITED</strong> BANDWIDTH</li>
-                            <li>SHARED SSL CERTIFICATE</li>
-                            <li><strong>10</strong> EMAIL ADDRESS</li>
-                            <li><strong>24/7</strong> SUPPORT</li>
-                            <li class="plan-purchase"><a class="btn btn-primary" href="#">ORDER NOW</a></li>
-                        </ul>
+                    <div class="col-sm-6 wow fadeInLeft full-width">
+                        <img class="img-responsive" src="images/taskalive/project_list.png" alt="">
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
-                    <div class="wow zoomIn" data-wow-duration="400ms" data-wow-delay="200ms">
-                        <ul class="pricing featured">
-                            <li class="plan-header">
-                                <div class="price-duration">
-                                    <span class="price">
-                                        ¥299
-                                    </span>
-                                    <span class="duration">
-                                        per month
-                                    </span>
-                                </div>
 
-                                <div class="plan-name">
-                                    Business
-                                </div>
-                            </li>
-                            <li><strong>3</strong> DOMAIN</li>
-                            <li><strong>300GB</strong> DISK SPACE</li>
-                            <li><strong>UNLIMITED</strong> BANDWIDTH</li>
-                            <li>SHARED SSL CERTIFICATE</li>
-                            <li><strong>30</strong> EMAIL ADDRESS</li>
-                            <li><strong>24/7</strong> SUPPORT</li>
-                            <li class="plan-purchase"><a class="btn btn-default" href="#">ORDER NOW</a></li>
-                        </ul>
+                <div class="col-sm-12 col-md-6 wow fadeInRight">
+                  <h3 class="column-title">项目 <b>一目了然</b></h3>
+                  <p>快速找到您所要查看的任务信息</p>
+
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <ul class="nostyle">
+                                <li><i class="fa fa-circle"></i> 项目名</li>
+                                <li><i class="fa fa-circle"></i> 开始、结束时间</li>
+                            </ul>
+                        </div>
+
+                        <div class="col-sm-6">
+                            <ul class="nostyle">
+                                <li><i class="fa fa-circle"></i> 项目负责人</li>
+                                <li><i class="fa fa-circle"></i> 项目建立时间</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <ul class="nostyle">
+                                <li><i class="fa fa-circle"></i> 项目详情</li>
+                                <li><i class="fa fa-circle"></i> 创建新项目</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <ul class="nostyle">
+                                <li><i class="fa fa-circle"></i> 导入项目模板</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
-                    <div class="wow zoomIn" data-wow-duration="400ms" data-wow-delay="400ms">
-                        <ul class="pricing">
-                            <li class="plan-header">
-                                <div class="price-duration">
-                                    <span class="price">
-                                        ¥499
-                                    </span>
-                                    <span class="duration">
-                                        per month
-                                    </span>
-                                </div>
+            </div>
+            <br />
+            <!-- 看板 -->
+            <div class="row">
+                <div class="col-sm-12 col-md-6 wow fadeInRight">
+                    <h3 class="column-title">看板  <b>进程管理</b></h3>
+                    <p>每个阶段的任务规划一目了然</p>
+                    <p>将每个大任务拆分成一个个小任务，分配给不同的项目成员，充分掌握任务的完成进度</p>
 
-                                <div class="plan-name">
-                                    Pro
-                                </div>
-                            </li>
-                            <li><strong>5</strong> DOMAIN</li>
-                            <li><strong>500GB</strong> DISK SPACE</li>
-                            <li><strong>UNLIMITED</strong> BANDWIDTH</li>
-                            <li>SHARED SSL CERTIFICATE</li>
-                            <li><strong>50</strong> EMAIL ADDRESS</li>
-                            <li><strong>24/7</strong> SUPPORT</li>
-                            <li class="plan-purchase"><a class="btn btn-primary" href="#">ORDER NOW</a></li>
-                        </ul>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <ul class="nostyle">
+                                <li><i class="fa fa-check-square"></i> 看板拖动</li>
+                                <li><i class="fa fa-check-square"></i> 任务标记</li>
+                            </ul>
+                        </div>
+
+                        <div class="col-sm-6">
+                            <ul class="nostyle">
+                                <li><i class="fa fa-check-square"></i> 任务进程可追溯</li>
+                                <li><i class="fa fa-check-square"></i> 任务阶段性划分</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3">
-                    <div class="wow zoomIn" data-wow-duration="400ms" data-wow-delay="600ms">
-                        <ul class="pricing">
-                            <li class="plan-header">
-                                <div class="price-duration">
-                                    <span class="price">
-                                        ¥699
-                                    </span>
-                                    <span class="duration">
-                                        per year
-                                    </span>
-                                </div>
+                <div class="col-sm-12 col-md-6 wow fadeInLeft">
+                    <h3 class="column-title">任务看板</h3>
 
-                                <div class="plan-name">
-                                    Ultra
-                                </div>
-                            </li>
-                            <li><strong>10</strong> DOMAIN</li>
-                            <li><strong>1000GB</strong> DISK SPACE</li>
-                            <li><strong>UNLIMITED</strong> BANDWIDTH</li>
-                            <li>SHARED SSL CERTIFICATE</li>
-                            <li><strong>100</strong> EMAIL ADDRESS</li>
-                            <li><strong>24/7</strong> SUPPORT</li>
-                            <li class="plan-purchase"><a class="btn btn-primary" href="#">ORDER NOW</a></li>
-                        </ul>
+                    <div class="col-sm-6 wow fadeInLeft full-width">
+                        <img class="img-responsive" src="images/taskalive/Kanban.png" alt="" style="width:100%">
+                    </div>
+                </div>
+            </div>
+            <br />
+            <br />
+            <!-- 甘特图 -->
+            <div class="row">
+                <div class="col-sm-12 col-md-6 wow fadeInLeft">
+                    <h3 class="column-title">甘特图</h3>
+
+                    <div class="col-sm-6 wow fadeInLeft full-width">
+                        <img class="img-responsive" src="images/taskalive/project_list.png" alt="">
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-6 wow fadeInRight">
+                  <h3 class="column-title">任务时间 <b>清晰明了</b></h3>
+                  <p>所有项目的开展进程一目了然</p>
+
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <ul class="nostyle">
+                                <li><i class="fa fa-calendar"></i> 任务名</li>
+                                <li><i class="fa fa-calendar"></i> 开始、结束时间</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <ul class="nostyle">
+                                <li><i class="fa fa-calendar"></i> 时间轴</li>
+                                <li><i class="fa fa-calendar"></i> 持续时长</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section><!--/#pricing-->
-
+    </section><!--/#about-->
 
     <!--footer-->
-    <nav data-load="footer.html"></nav>
+    <footer></footer>
     <!--footer over-->
 
-
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/mousescroll.js"></script>
     <script src="js/smoothscroll.js"></script>
@@ -167,13 +166,16 @@
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
     <script>
-    $(function(){
-        $("[data-load]").each(function(){
-            $(this).load($(this).data("load"), function(){
-            });
-        });
-    })
+        $(function(){
+            $("header").load('./header.html');
+            $("footer").load('./footer.html');
+        })
     </script>
+    <style>
+    .full-width{
+      width: auto;
+    }
+    </style>
 
 </body>
 </html>
