--- a/costcontrol.html
+++ b/costcontrol.html
@@ -24,53 +24,30 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+
 </head><!--/head-->
 
 <body id="home" class="homepage">
-
     <!-- 顶部导航 -->
     <header></header>
     <!--顶部导航 over-->
 
-    <section id="contact">
-<div class="container" style="width:100%;background: rgba(69, 174, 214, 0.3);">
-
-  <div class="contact-form">
-    <h3>Contact Info</h3>
-
-    <!-- <address>
-      <strong>Twitter, Inc.</strong><br>
-      795 Folsom Ave, Suite 600<br>
-      San Francisco, CA 94107<br>
-      <abbr title="Phone">P:</abbr> (123) 456-7890
-    </address> -->
-
-    <form id="main-contact-form" name="contact-form" method="post" action="#">
-      <div class="form-group">
-        <input type="text" name="name" class="form-control" placeholder="Name" required>
-      </div>
-      <div class="form-group">
-        <input type="email" name="email" class="form-control" placeholder="Email" required>
-      </div>
-      <div class="form-group">
-        <input type="text" name="subject" class="form-control" placeholder="Subject" required>
-      </div>
-      <div class="form-group">
-        <textarea name="message" class="form-control" rows="8" placeholder="Message" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Send Message</button>
-    </form>
-  </div>
-</div>
-    </section><!--/#bottom-->
+    <section id="cta2">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms"><span>Coming</span> Soon</h2>
+                <img class="img-responsive wow fadeIn" src="images/cta2/cta2-img.png" alt="" data-wow-duration="300ms" data-wow-delay="300ms">
+            </div>
+        </div>
+    </section>
 
     <!--footer-->
-    <footer></footer>
+    <footer></footer><!--/#footer-->
     <!--footer over-->
 
-
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/mousescroll.js"></script>
     <script src="js/smoothscroll.js"></script>
@@ -85,5 +62,6 @@
             $("footer").load('./footer.html');
         })
     </script>
+
 </body>
 </html>
