--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 <div class="container" style="width:100%;background: rgba(69, 174, 214, 0.3);">
 
   <div class="contact-form">
-    <h3>Contact Info</h3>
+    <h3>联系我们</h3>
 
     <!-- <address>
       <strong>Twitter, Inc.</strong><br>
@@ -44,6 +44,10 @@
       San Francisco, CA 94107<br>
       <abbr title="Phone">P:</abbr> (123) 456-7890
     </address> -->
+    <address>
+      如您遇到任何问题，请发送邮件至 <strong>contact@droproblem.com</strong><br />
+      我们将竭力帮您解决
+    </address>
 
     <form id="main-contact-form" name="contact-form" method="post" action="#">
       <div class="form-group">
