--- a/header.html
+++ b/header.html
@@ -19,7 +19,7 @@
                       <div  id="dropdown_apps" class="list-group">
                           <a href="taskalive.html" class="list-group-item apps_list_item">TaskAlive</a>
                           <a href="costcontrol.html" class="list-group-item apps_list_item">Cost Control</a>
-                          <a href="#" class="list-group-item apps_list_item">FMEA</a>
+                          <a href="fmea.html" class="list-group-item apps_list_item">FMEA</a>
                       </div>
                     </li>
                     <li ><a href="price.html">Pricing</a></li>
