--- a/about.html
+++ b/about.html
@@ -34,45 +34,30 @@
         <div class="container">
 
             <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">About Us</h2>
-                <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <h2 class="section-title text-center wow fadeInDown">关于我们</h2>
+                <p class="text-center wow fadeInDown">
+                  上海觉朴信息技术有限公司，成立于2018年，是一家新兴的软件技术与企业解决方案提供商。<br>
+                  我们致力于为客户提供高效、简洁、互通型应用服务，帮助客户打造企业无纸化办公。<br>
+                  打造在网页、桌面、移动多环境下的便捷应用。</p>
             </div>
+            <div class="row text-center">
+       				<div class="col-md-4 about_grid">
+                <div class="icon_container"><i class="icon1"> </i></div>
+       					<h3><a href="#">用户</a></h3>
+       					<p>我们始终以用户为中心，时刻听取每一次用户反馈及建议，希望用户也能提供更多的反馈意见</p>
+       				</div>
+       				<div class="col-md-4 about_grid">
+       					<div class="icon_container"><i class="icon2"> </i></div>
+       					<h3><a href="#">创新</a></h3>
+       					<p>我们将不断创新、进步，创造更多可提供高质量服务的应用。</p>
+       				</div>
+       				<div class="col-md-4 about_grid">
+       					<div class="icon_container"><i class="icon3"> </i></div>
+       					<h3><a href="#">诚信</a></h3>
+       					<p>我们秉承诚信为本的理念，相互信任才能共创优秀企业与产品。</p>
+       				</div>
+       			</div>
 
-            <div class="row">
-                <div class="col-sm-6 wow fadeInLeft">
-                    <h3 class="column-title">Video Intro</h3>
-                    <!-- 16:9 aspect ratio -->
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="//player.vimeo.com/video/58093852?title=0&amp;byline=0&amp;portrait=0&amp;color=e79b39" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 wow fadeInRight">
-                    <h3 class="column-title">Multi Capability</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <ul class="nostyle">
-                                <li><i class="fa fa-check-square"></i> Ipsum is simply dummy</li>
-                                <li><i class="fa fa-check-square"></i> When an unknown</li>
-                            </ul>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <ul class="nostyle">
-                                <li><i class="fa fa-check-square"></i> The printing and typesetting</li>
-                                <li><i class="fa fa-check-square"></i> Lorem Ipsum has been</li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <a class="btn btn-primary" href="#">Learn More</a>
-
-                </div>
-            </div>
         </div>
     </section><!--/#about-->
 
