--- a/fmea.html
+++ b/fmea.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="text-center">
               <h2 class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms">
-                Cost Control
+                FMEA
               </h2>
                 <h2 class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms">
                   <span>Coming</span> Soon
