--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                         <p class="slider_p">集成式管理应用 </p>
                                         <p class="slider_p">简洁  易用  方便</p>
                                         <p class="slider_p">让您的办公更加轻松</p>
-                                        <a class="btn btn-primary btn-lg" href="#">Read More</a>
+                                        <!-- <a class="btn btn-primary btn-lg" href="#">Read More</a> -->
                                     </div>
                                 </div>
                             </div>
@@ -58,7 +58,7 @@
                                 <div class="col-sm-6">
                                     <div class="carousel-content">
                                       <h1><span>Droproblem</span> </h1>
-                                      <a class="btn btn-primary btn-lg" href="#">Read More</a>
+                                      <!-- <a class="btn btn-primary btn-lg" href="#">Read More</a> -->
                                     </div>
                                 </div>
                             </div>
@@ -84,6 +84,60 @@
                 </div>
             </div>
         </section><!--/#cta-->
+
+        <section id="services">
+          <div class="container">
+            <div class="section-header">
+                <h2 class="section-title text-center wow fadeInDown">产品列表</h2>
+                <!-- <p class="text-center wow fadeInDown">产品数据相互关联 <br> 满足企业的一切业务需求</p> -->
+                <div class="row">
+                    <div class="features">
+                        <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms">
+                            <div class="media service-box">
+                                <div class="pull-left">
+                                    <!-- <i class="fa fa-line-chart"></i> -->
+                                    <img src="images/apps/taskalive.png" width="64px"/>
+                                </div>
+                                <div class="media-body">
+                                    <h4 class="media-heading">TaskAlive</h4>
+                                    <p>项目管理应用</p><br />
+
+                                </div>
+                                <a class="btn btn-primary" href="taskalive.html">Learn More</a>
+                            </div>
+                        </div><!--/.col-md-4-->
+
+                        <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">
+                            <div class="media service-box">
+                                <div class="pull-left">
+                                    <img src="images/apps/costcontrol.png" width="64px"/>
+                                </div>
+                                <div class="media-body">
+                                    <h4 class="media-heading">Cost Control</h4>
+                                    <p>成本管理应用</p>
+                                    <p>敬请期待</p>
+                                </div>
+                            </div>
+                        </div><!--/.col-md-4-->
+
+                        <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">
+                            <div class="media service-box">
+                                <div class="pull-left">
+                                    <img src="images/apps/FMEA.png" width="64px"/>
+                                </div>
+                                <div class="media-body">
+                                    <h4 class="media-heading">FMEA</h4>
+                                    <p>潜在的失效模式及后果分析</p>
+                                    <p>敬请期待</p>
+                                </div>
+                            </div>
+                        </div><!--/.col-md-4-->
+
+
+                    </div>
+                </div><!--/.row-->
+            </div><!--/.container-->
+        </section><!--/#apps_list-->
 
         <section id="features">
             <div class="container">
@@ -136,17 +190,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="cta2">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms"><span>MULTI</span> IS A CREATIVE HTML TEMPLATE</h2>
-                    <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">Mauris pretium auctor quam. Vestibulum et nunc id nisi fringilla <br />iaculis. Mauris pretium auctor quam.</p>
-                    <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="200ms"><a class="btn btn-primary btn-lg" href="#">Free Download</a></p>
-                    <img class="img-responsive wow fadeIn" src="images/cta2/cta2-img.png" alt="" data-wow-duration="300ms" data-wow-delay="300ms">
                 </div>
             </div>
         </section>
